# pharmaDE

./: mfr.html  pyproject.toml
pharmade/: data-exploration.ipynb  etldev.ipynb  main.ipynb
pharmade/Dashboard/: mainpage.py
pharmade/Dashboard/pages/: distandcust.py  salesTeamPerformance.py  sqltoquery.py
pharmade/ETLpipeline/: ETLPIPELINE.py
pharmade/SQLquery/: avgsalebycity.sql  dasboardqueries.sql
pharmade/etl/: ETL.py
pharmade/notebooks/: etldev.ipynb  main.ipynb
